<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/photo"
    tools:context=".UI.SplashScreen">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/front_page_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="#3A01A3"
        android:fontFamily="casual"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/front_page_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/front_page_header"
        app:layout_constraintVertical_bias="0.24000001">

        <RadioButton
            android:id="@+id/emailBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailBtn"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/chatBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chatBtn"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />


    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>