<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_margin="8dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="#C9BDD1"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        >
    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
        <TextView
            android:id="@+id/email_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/email_name"
            android:textStyle="bold"
            android:gravity="start"
            android:layout_gravity="start"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="parent"
             />

        <TextView
            android:id="@+id/email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_title"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLength="25"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/email_name"
             />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/message"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/email_name"

             />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="337dp" />


        <TextView
            android:id="@+id/fake_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fake_time"
            android:textStyle="bold"
            android:gravity="start"
            android:layout_gravity="start"
            app:layout_constraintStart_toEndOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:id="@+id/favor_pic"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:src="@drawable/ic_baseline_favorite_border_24"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75"
             />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>